# arc-kit

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  ARC-METHODOLOGY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  adaptive-spec-driven.md  pyproject.toml  spec-driven.md  validate_arc_kit.py
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS
.github/workflows/scripts/: create-github-release.sh  create-release-packages.ps1  create-release-packages.sh  generate-release-notes.sh
docs/: docfx.json  index.md  quickstart.md
memory/: constitution.md
scripts/bash/: analyze-spec.sh  common.sh  create-new-feature.sh  create-quality-checklist.sh  generate-tasks.sh  setup-design.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: analyze-spec.ps1  common.ps1  create-new-feature.ps1  create-quality-checklist.ps1  generate-tasks.ps1  setup-design.ps1  setup-plan.ps1  update-agent-context.ps1
src/arc_cli/: __init__.py
templates/: adaptive-agent-file-template.md  adaptive-checklist-template.md  adaptive-plan-template.md  adaptive-spec-template.md  adaptive-tasks-template.md  architecture-template.md  vscode-settings.json
templates/commands/: analyze.md  chain.md  checklist.md  clarify.md  constitution.md  define.md  design.md  implement.md  plan.md  tasks.md  taskstoissues.md
